static graphic done

--- a/lab1/attempt/index.html
+++ b/lab1/attempt/index.html
@@ -6,12 +6,12 @@
     <style>
 	  body {
         margin: 0px;
-        background-color: #000;
+        background-color: #aaa;
         overflow: hidden;
       }
     </style>
-    <script src="js/three.js"></script>
-    <script src="js/mesa.js"></script>
+    <script src="./js/three.js"></script>
+    <script src="./js/table.js"></script>
   </head>
   <body>
     <script>
