--- a/lab1/attempt/index.html
+++ b/lab1/attempt/index.html
@@ -8,18 +8,14 @@
         margin: 0px;
         background-color: #aaa;
         overflow: hidden;
-      }
     </style>
-    <script src="./js/three.js"></script>
-    <script src="./js/table.js"></script>
+    <script src="js/three.js"></script>
+    <script src="js/table.js"></script>
   </head>
   <body>
     <script>
       init();
+      animate()
     </script>
   </body>
 </html>
-
-
-
-
