--- a/project1/index.html
+++ b/project1/index.html
@@ -1,15 +1,13 @@
-<!--> Graphic Computation 1st Project </!--> 
-<!--> Baltasar Dinis 89416 </!--> 
-<!--> Pedro M. Pires 78742 </!--> 
-<!--> Group 21 </!--> 
-
-<!--> a anunciar </!--> 
-
+<!-- Graphic Computation 1st Project --> 
+<!-- Baltasar Dinis 89416 --> 
+<!-- Pedro M. Pires 78742 --> 
+<!-- Group 21 --> 
+<!-- a anunciar --> 
 <!doctype html>
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>1&ordf; Projecto CG LEIC-A Grupo 21</title>
+    <title>1&ordm; Projecto CG LEIC-A Grupo 21</title>
     <style>
 	  body {
         margin: 0px;
