added the skeleton scripts

--- a/project1/index.html
+++ b/project1/index.html
@@ -16,6 +16,10 @@
         overflow: hidden;
     </style>
     <script src="js/three.js"></script>
+    <script src="js/scene.js"></script>
+    <script src="js/table.js"></script>
+    <script src="js/chair.js"></script>
+    <script src="js/lamp.js"></script>
   </head>
   <body>
   </body>
