--- a/project1/index.html
+++ b/project1/index.html
@@ -20,7 +20,9 @@
     <script src="js/table.js"></script>
     <script src="js/chair.js"></script>
     <script src="js/lamp.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
+    init();
   </body>
 </html>
