skeleton for the table is done

--- a/project1/index.html
+++ b/project1/index.html
@@ -23,6 +23,8 @@
     <script src="js/main.js"></script>
   </head>
   <body>
-    init();
+    <script>
+      init();
+    </script>
   </body>
 </html>
