--- a/project2/index.html
+++ b/project2/index.html
@@ -1,4 +1,4 @@
-<!-- Graphic Computation 1st Project --> 
+<!-- Graphic Computation 2nd Project --> 
 <!-- Baltasar Dinis 89416 --> 
 <!-- Pedro M. Pires 78742 --> 
 <!-- José Bartissol 85061 --> 
