added orbits control

--- a/project3/index.html
+++ b/project3/index.html
@@ -19,6 +19,7 @@
     <script src="js/example.js"></script>
     <script src="js/scene.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/OrbitControls.js"></script>
   </head>
   <body>
     <script>
