--- a/project3/index.html
+++ b/project3/index.html
@@ -16,7 +16,7 @@
         overflow: hidden;
     </style>
     <script src="js/three.js"></script>
-    <script src="js/example.js"></script>
+    <script src="js/plane.js"></script>
     <script src="js/scene.js"></script>
     <script src="js/sunlight.js"></script>
     <script src="js/main.js"></script>
