base and lamps have different materials

--- a/project3/model.html
+++ b/project3/model.html
@@ -17,6 +17,7 @@
     </style>
     <script src="js/three.js"></script>
     <script src="js/plane.js"></script>
+    <script src="js/materials.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="test_js/main.js"></script>
   </head>
