--- a/project3/index.html
+++ b/project3/index.html
@@ -21,6 +21,7 @@
     <script src="js/sunlight.js"></script>
     <script src="js/main.js"></script>
     <script src="js/lamppost.js"></script>
+    <script src="js/materials.js"></script>
     <script src="js/base.js"></script>
     <script src="js/OrbitControls.js"></script>
   </head>
