--- a/project3/model.html
+++ b/project3/model.html
@@ -17,7 +17,9 @@
     </style>
     <script src="js/three.js"></script>
     <script src="js/plane.js"></script>
+    <script src="js/base.js"></script>
     <script src="js/materials.js"></script>
+    <script src="js/tesselate.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="test_js/main.js"></script>
   </head>
