--- a/project3/model.html
+++ b/project3/model.html
@@ -18,6 +18,7 @@
     <script src="js/three.js"></script>
     <script src="js/plane.js"></script>
     <script src="js/materials.js"></script>
+    <script src="js/tesselate.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="test_js/main.js"></script>
   </head>
