chess text, rough, needs improvements

--- a/project4/index.html
+++ b/project4/index.html
@@ -16,15 +16,12 @@
         overflow: hidden;
     </style>
     <script src="js/three.js"></script>
-    <script src="js/plane.js"></script>
     <script src="js/scene.js"></script>
-    <script src="js/sunlight.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/lamppost.js"></script>
-    <script src="js/materials.js"></script>
-    <script src="js/tesselate.js"></script>
-    <script src="js/base.js"></script>
     <script src="js/OrbitControls.js"></script>
+    <script src="js/board.js"></script>
+    <script src="js/materials.js"></script>
+
   </head>
   <body>
     <script>
