new improvements, new ball added with the pool ball texture

--- a/project4/index.html
+++ b/project4/index.html
@@ -21,6 +21,8 @@
     <script src="js/OrbitControls.js"></script>
     <script src="js/board.js"></script>
     <script src="js/materials.js"></script>
+    <script src="js/dirlight.js"></script>
+    <script src="js/poolball.js"></script>
 
   </head>
   <body>
