got rotating camera

--- a/project4/index.html
+++ b/project4/index.html
@@ -23,6 +23,7 @@
     <script src="js/materials.js"></script>
     <script src="js/dirlight.js"></script>
     <script src="js/poolball.js"></script>
+    <script src="js/rotatingCamera.js"></script>
 
   </head>
   <body>
