--- a/project4/index.html
+++ b/project4/index.html
@@ -22,6 +22,7 @@
     <script src="js/board.js"></script>
     <script src="js/materials.js"></script>
     <script src="js/dirlight.js"></script>
+    <script src="js/pointlight.js"></script>
     <script src="js/poolball.js"></script>
     <script src="js/rotatingCamera.js"></script>
 
