--- a/project4/index.html
+++ b/project4/index.html
@@ -8,7 +8,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>3&ordm; Projecto CG LEIC-A Grupo 21</title>
+    <title>4&ordm; Projecto CG LEIC-A Grupo 21</title>
     <style>
 	  body {
         margin: 0px;
@@ -16,8 +16,11 @@
         overflow: hidden;
     </style>
     <script src="js/three.js"></script>
-    <script src="js/scene.js"></script>
+    <script src="js/mainScene.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/messageCamera.js"></script>
+    <script src="js/messageScene.js"></script>
+    <script src="js/message.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="js/board.js"></script>
     <script src="js/materials.js"></script>
