--- a/project4/index.html
+++ b/project4/index.html
@@ -18,6 +18,7 @@
     <script src="js/three.js"></script>
     <script src="js/mainScene.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/rubiks.js"></script>
     <script src="js/messageCamera.js"></script>
     <script src="js/messageScene.js"></script>
     <script src="js/message.js"></script>
